# rust-wasm-game

./: .editorconfig  Cargo.toml  LICENSE_MIT
src/: lib.rs  utils.rs
src/core/: bouncer.rs  mod.rs  motion.rs  render_frame.rs  sprite.rs
www/: index.html  index.js  package-lock.json  package.json
